# dyson

./: README.md  pyproject.toml  test_ewdmet.py  test_qp_ewdmet.py
.github/workflows/: ci.yaml  docs.yaml
docs/source/: conf.py  dyson.rst  index.rst
dyson/: __init__.py  _backend.py  lehmann.py  plotting.py  printing.py  spectral.py  typing.py  util.py
dyson/expressions/: __init__.py  adc.py  ccsd.py  dmrg.py  expression.py  fci.py  gw.py  hamiltonian.py  hf.py  mp2.py
dyson/grids/: __init__.py  fourier.py  frequency.py  grid.py  pade.py  time.py
dyson/representations/: __init__.py  dynamic.py  enums.py  lehmann.py  representation.py  spectral.py
dyson/solvers/: .self_consistent.py.swp  __init__.py  block_lanczos_direct.py  block_lanczos_indirect.py  chempot.py  cpgf.py  davidson.py  density.py  downfolded.py  exact.py  kpmgf.py  mblgf.py  mblse.py  self_consistent.py  solver.py
dyson/solvers/addons/: chempot.py  scf.py
dyson/solvers/dynamic/: __init__.py  corrvec.py  cpgf.py  kpmgf.py
dyson/solvers/static/: __init__.py  _mbl.py  chempot.py  componentwise.py  davidson.py  density.py  downfolded.py  exact.py  mblgf.py  mblse.py
dyson/util/: __init__.py  energy.py  linalg.py  logging.py  misc.py  moments.py  spectra.py
examples/: 00-mblse.py  01-mblgf.py  02-kpmgf.py  03-cpgf.py  10-ph_separation.py  11-aufbau.py  12-auxiliary_shift.py  13-density_relaxation.py  13-self_consistent_field.py  20-kernel_types.py  30-agf2.py  31-fci.py  32-gfccsd.py  32-momgfccsd.py  33-adc2.py  34-eom_ccsd.py  35-ewdmet.py  35-fci.py  36-moment_gw.py  38-fci_static_self_energy.py  40-exact_spectral_function.py  kpmgf_example.py  particle-hole-separation.py  solver-aufbau.py  solver-corrvec.py  solver-cpgf.py  solver-davidson.py  solver-density.py  solver-downfolded.py  solver-exact.py  solver-mblgf.py  solver-mblse.py  solver-shift.py  spectra.py  unknown-pleasures.py
tests/: __init__.py  conftest.py  test_chempot.py  test_corrvec.py  test_cpgf.py  test_davidson.py  test_density.py  test_downfolded.py  test_exact.py  test_expressions.py  test_grids.py  test_lehmann.py  test_mblgf.py  test_mblse.py  test_util.py
tests/expressions/: test_ccsd.py  test_gw.py  test_mp2.py
tests/solvers/: test_aufbau.py  test_auxiliary_shift.py  test_davidson.py  test_density.py  test_downfolded.py  test_exact.py  test_mblgf.py  test_mblse.py  test_scf.py  test_self_consistent.py
tests/util/: test_energy.py  test_moments.py
