[project]
name = "dyson"
version = "1.0.0"
description = "Dyson equation solvers for electron propagator methods"
keywords = [
    "quantum", "chemistry",
    "electronic", "structure",
    "dyson", "equation", "solver",
    "electron", "propagator",
    "self", "energy",
    "greens", "function",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
	"Topic :: Software Development",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: POSIX :: Linux",
]
dependencies = [
	"numpy>=1.19.0",
    "scipy>=1.5.0",
    "pyscf>=2.0.0",
    "rich>=11.0.0",
]

[project.optional-dependencies]
jax = [
    "jax>=0.5.0",
    "jaxlib>=0.5.0",
    "pyscfad>=0.1.0",
]
dev = [
    "ruff>=0.10.0",
    "mypy>=1.5.0",
    "coverage[toml]>=5.5.0",
    "pytest>=6.2.4",
    "pytest-cov>=4.0.0",
    "matplotlib>=3.4.0",
    "sphinx>=7.0",
    "sphinx-book-theme>=1.0",
    "sphinx-mdinclude>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
include = ["pyproject.toml", "dyson/**/*.py", "tests/**/*.py", "examples/**/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "PL",  # pylint
]
ignore = [
    "E722",  # bare-except
    "E731",  # lambda-assignment
    "E741",  # ambiguous-variable-name
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0915",  # too-many-statements
    "PLR2004",  # magic-value-comparison
    "PLR5501",  # collapsible-else-if
    "PLW2901",  # redefined-loop-name
]

[tool.ruff.lint.per-file-ignores]
"dyson/__init__.py" = [
    "D205",  # missing-blank-line-after-summary
    "D212",  # multi-line-summary-first-line
    "D415",  # missing-terminal-punctuation
]
"dyson/**/__init__.py" = [
    "I001",  # unsorted-imports
    "F401",  # unused-import
]
"tests/**/*.py" = [
    "D103",  # undocumented-public-function
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["dyson"]

[tool.mypy]
python_version = "3.12"
exclude = """
/(
    | __pycache__
    | .git
)/
"""

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyscf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyscfad.*"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = [
    "dyson",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "raise util.ModelNotImplemented",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "cov_html"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = [
    "dyson",
    "tests",
]
addopts = "--doctest-modules --cov=dyson"
